--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tenebris Arcaneus - Início</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="advanced.css">
 </head>
 <body>
   <!-- Cabeçalho e Navegação -->
   <header>
     <div class="container header-container">
+      <!-- Ícone de menu móvel (três pontinhos) à esquerda -->
+      <span class="mobile-nav-toggle">&#8230;</span>
       <h1>Tenebris Arcaneus</h1>
       <nav>
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="about.html">Sobre</a></li>
           <li><a href="products.html">Produtos</a></li>
+          <li><a href="investors.html">Investidores</a></li>
           <li><a href="contact.html">Contato</a></li>
-          <li><a href="rights.html">Direitos</a></li>
         </ul>
       </nav>
     </div>
@@ -28,19 +30,20 @@
     <div class="container">
       <h2>Bem-vindo ao Tenebris Arcaneus</h2>
       <p>
-        Somos especialistas em pentesting e hacking ético. Aqui você encontrará scripts avançados e ferramentas para testar a segurança de ambientes digitais somente para uso autorizado.
+        Somos especialistas em pentesting e hacking ético. Aqui você encontrará scripts avançados e ferramentas para testar a segurança de ambientes digitais – <strong>somente para uso autorizado</strong>.
       </p>
       <a href="products.html" class="btn">Ver Produtos</a>
     </div>
   </section>
-  <script src="script.js" defer></script>
 
   <!-- Rodapé -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Tenebris Arcaneus. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Tenebris Arcaneus. <a href="rights.html">Todos os Direitos Reservados</a>.</p>
       <p><a href="https://github.com/tenebrisarcaneus" target="_blank">GitHub</a></p>
     </div>
   </footer>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
