--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tenebris Arcaneus - Contato</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="advanced.css">
 </head>
 <body>
   <!-- Cabeçalho e Navegação -->
   <header>
     <div class="container header-container">
+      <span class="mobile-nav-toggle">&#8230;</span>
       <h1>Tenebris Arcaneus</h1>
       <nav>
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="about.html">Sobre</a></li>
           <li><a href="products.html">Produtos</a></li>
+          <li><a href="investors.html">Investidores</a></li>
           <li><a href="contact.html">Contato</a></li>
-          <li><a href="rights.html">Direitos</a></li>
         </ul>
       </nav>
     </div>
@@ -28,28 +29,30 @@
     <div class="container">
       <h2>Contato</h2>
       <p>Entre em contato para mais informações, suporte ou para adquirir nossas ferramentas.</p>
-      <!-- Formulário de Contato -->
-      <form action="mailto:contato@tenebrisarcaneus.com" method="post" enctype="text/plain">
+      <form id="contact-form">
         <label for="name">Nome:</label>
-        <input type="text" id="name" name="nome" required>
+        <input type="text" id="name" name="name" required>
 
         <label for="email">E-mail:</label>
         <input type="email" id="email" name="email" required>
 
         <label for="message">Mensagem:</label>
-        <textarea id="message" name="mensagem" required></textarea>
+        <textarea id="message" name="message" required></textarea>
 
         <button type="submit" class="btn">Enviar</button>
       </form>
+      <div id="contact-response"></div>
     </div>
   </section>
 
   <!-- Rodapé -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Tenebris Arcaneus. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Tenebris Arcaneus. <a href="rights.html">Todos os Direitos Reservados</a>.</p>
       <p><a href="https://github.com/tenebrisarcaneus" target="_blank">GitHub</a></p>
     </div>
   </footer>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
