--- a/index.html
+++ b/index.html
@@ -224,15 +224,15 @@
       <p>Ou aproximadamente <strong>R$ 250,00</strong> (valor sujeito à cotação atual).</p>
       <p>Adquira o Tenebris Arcaneus e transforme sua prática de segurança cibernética!</p>
       <!-- Atualize o href abaixo com o link real da sua página de venda -->
-      <a class="buy-btn" href="https://seulinkdecompra.com" target="_blank">Comprar Agora</a>
+      <a class="buy-btn" href="https://ko-fi.com/s/45c2739aeb" target="_blank">Comprar Agora</a>
     </section>
 
     <!-- Seção Contato -->
     <section id="contact">
       <h2>Contato</h2>
       <p>Para dúvidas, suporte ou treinamentos personalizados, entre em contato:</p>
-      <p>Email: <a href="mailto:contato@tenebrisarcaneus.com">contato@tenebrisarcaneus.com</a></p>
-      <p>WhatsApp: +55 11 91234-5678</p>
+      <p>Email: <a href="mailto:tenebrisarcaneus@mailfence.com">contato@tenebrisarcaneus.com</a></p>
+      <p>WhatsApp: +55 12 99950-0827</p>
     </section>
   </div>
 
