--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <section id="contact">
       <h2>Contato</h2>
       <p>Para dúvidas, suporte ou treinamentos personalizados, entre em contato:</p>
-      <p>Email: <a href="mailto:tenebrisarcaneus@mailfence.com">contato@tenebrisarcaneus.com</a></p>
+      <p>Email: <a href="mailto:tenebrisarcaneus@mailfence.com">tenebrisarcaneus@mailfence.com</a></p>
       <p>WhatsApp: +55 12 99950-0827</p>
     </section>
   </div>
