--- a/index.html
+++ b/index.html
@@ -166,6 +166,69 @@
       }
     }
   </style>
+<!-- SEO Avançado para Tenebris Arcaneus -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="Tenebris Arcaneus">
+<meta name="robots" content="index, follow">
+<meta name="theme-color" content="#000000">
+
+<!-- 📌 Meta Title (Título Principal) -->
+<title>Tenebris Arcaneus - Ferramenta de Hacking Ético e Pentest Automático</title>
+
+<!-- 📌 Meta Description (Descrição para Google) -->
+<meta name="description" content="Ferramenta avançada de hacking ético e pentest automatizado. Teste redes, sites e sistemas de forma eficiente. Ideal para iniciantes e especialistas. Aprenda e proteja-se!">
+
+<!-- 📌 Meta Keywords (Palavras-chave para SEO) -->
+<meta name="keywords" content="hacking ético, pentest, teste de penetração, segurança da informação, ferramentas de hacking, ethical hacking, Kali Linux, BlackArch, vulnerabilidades, exploit, pentesting, hacking de redes, hacking web, anonimato, OSINT, Tor, engenharia reversa, análise forense, cracking de senhas, segurança digital, hacking para iniciantes, segurança ofensiva, cibersegurança, ferramentas de pentest, invasão de redes, análise de vulnerabilidades, consultoria em segurança, auditoria digital, hacking em Linux, exploit development, força bruta, engenharia social, ataques cibernéticos, forense digital, melhores ferramentas de hacking, curso de hacking, hacking fácil, segurança corporativa, proteção de dados, hackers profissionais, melhores técnicas de hacking">
+
+<!-- 📌 Open Graph (Melhor visualização ao compartilhar nas redes sociais) -->
+<meta property="og:title" content="Tenebris Arcaneus - Ferramenta de Hacking Ético e Pentest">
+<meta property="og:description" content="Aprenda pentest e hacking ético de forma automática! Ferramenta avançada para profissionais e iniciantes.">
+<meta property="og:image" content="https://tenebrisarcaneus.github.io/imagens/logo.png">
+<meta property="og:url" content="https://tenebrisarcaneus.github.io/site/">
+<meta property="og:type" content="website">
+
+<!-- 📌 Twitter Card (Otimização para Twitter/X) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Tenebris Arcaneus - Hacking Ético e Pentest">
+<meta name="twitter:description" content="A ferramenta definitiva para testes de segurança e análise de vulnerabilidades.">
+<meta name="twitter:image" content="https://tenebrisarcaneus.github.io/imagens/logo.png">
+<meta name="twitter:site" content="@TArcaneus">
+
+<!-- 📌 Favicon -->
+<link rel="icon" href="https://tenebrisarcaneus.github.io/imagens/favicon.ico" type="image/x-icon">
+
+<!-- 📌 Canonical (Evita conteúdo duplicado) -->
+<link rel="canonical" href="https://tenebrisarcaneus.github.io/site/">
+
+<!-- 📌 Estrutura de Dados (SEO Avançado para Google) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Tenebris Arcaneus",
+  "operatingSystem": "Linux, Windows",
+  "applicationCategory": "Security",
+  "offers": {
+    "@type": "Offer",
+    "price": "50.00",
+    "priceCurrency": "USD",
+    "url": "https://ko-fi.com/s/45c2739aeb"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.9",
+    "reviewCount": "200"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Tenebris Arcaneus",
+    "url": "https://tenebrisarcaneus.github.io/"
+  }
+}
+</script>
+
 </head>
 <body>
   <header>
