--- a/index.html
+++ b/index.html
@@ -230,6 +230,15 @@
 </script>
 
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F4CP5FY10J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F4CP5FY10J');
+</script>
 <body>
   <header>
     <div>
