--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="Tenebris Arcaneus, Hacking Ético, Pentest, OSINT, Forense Digital, Segurança Cibernética, Ferramenta de Pentest, IA para Hacking, Vulnerabilidades, Hacker Ético">
   <meta name="author" content="Tenebris Arcaneus">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="pushsdk" content="95938b2dbe97aa5d28e258445b92915c">
   <title>Tenebris Arcaneus - Ultimate Hacking Tool com IA</title>
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
