--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Tenebris Arcaneus">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="pushsdk" content="95938b2dbe97aa5d28e258445b92915c">
+  <meta name="pushsdk" content="2ced53f23db495e4abb501faf190acfc">
   <title>Tenebris Arcaneus - Ultimate Hacking Tool com IA</title>
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
